# wardend

./: CLAUDE.md  Cargo.toml  GLOSSARY.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: BUILD-PLAN.md
docs/adr/: 0001-language-rust.md  0002-cargo-workspace-feature-flags.md  0003-plugin-protocol-subprocess-json.md  0004-plugin-curation-pr-gated-signed.md  0005-output-traffic-light-plain-english.md  0006-distribution-native-packages.md  0007-update-model.md  0008-threat-intel-local-pull-hash-only.md  0009-licence-gpl-v3.md  0010-mvp-process-model-on-demand.md  0011-first-party-modules-dogfood-subprocess.md  0012-plugin-discovery-and-trust.md  0013-async-runtime-tokio-in-core.md  0014-module-vs-plugin-terminology.md  0015-core-derived-status-severity-ladder.md  0016-two-binary-polkit-privilege-model.md  README.md
packaging/: PKGBUILD  PKGBUILD.git  dev.wardend.scan.policy  wardend-feeds.service  wardend-feeds.timer  wardend.install
wardend-cli/: Cargo.toml
wardend-cli/src/: lib.rs  main.rs
wardend-core/: Cargo.toml
wardend-core/src/: config.rs  feeds.rs  lib.rs  main.rs  runner.rs  status.rs
wardend-core/tests/: runner.rs
wardend-plugin-cve-check/: Cargo.toml
wardend-plugin-cve-check/src/: main.rs
wardend-plugin-file-hash-check/: Cargo.toml
wardend-plugin-file-hash-check/src/: main.rs
wardend-plugin-pkgbuild-audit/: Cargo.toml
wardend-plugin-pkgbuild-audit/src/: analyzer.rs  main.rs
wardend-plugin-pkgbuild-audit/tests/fixtures/: clean_package.pkgbuild  malicious_atomic_arch.pkgbuild  malicious_base64_eval.pkgbuild  malicious_curl_pipe.pkgbuild  malicious_npm_pip.pkgbuild  malicious_suspicious_domain.pkgbuild  malicious_weak_checksums.pkgbuild
wardend-plugin-rkhunter-wrapper/: Cargo.toml
wardend-plugin-rkhunter-wrapper/src/: main.rs
wardend-plugin-setuid-audit/: Cargo.toml
wardend-plugin-setuid-audit/src/: main.rs
wardend-proto/: Cargo.toml
wardend-proto/src/: lib.rs
