[workspace]
resolver = "2"
members = [
    "wardend-proto",
    "wardend-core",
    "wardend-cli",
    "wardend-plugin-setuid-audit",
    "wardend-plugin-pkgbuild-audit",
    "wardend-plugin-cve-check",
    "wardend-plugin-file-hash-check",
    "wardend-plugin-rkhunter-wrapper",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
