[package]
name = "wardend-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "wardend-cli"
path = "src/main.rs"

[lib]
name = "wardend_cli"
path = "src/lib.rs"

[dependencies]
wardend-proto = { path = "../wardend-proto" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
