[package]
name = "wardend-plugin-file-hash-check"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "wardend-plugin-file-hash-check"
path = "src/main.rs"

[dependencies]
wardend-proto = { path = "../wardend-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
