[package]
name = "wardend-plugin-pkgbuild-audit"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "wardend-plugin-pkgbuild-audit"
path = "src/main.rs"

[dependencies]
wardend-proto = { path = "../wardend-proto" }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["tls"] }

[lints]
workspace = true
