[package]
name = "wardend-plugin-rkhunter-wrapper"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "wardend-plugin-rkhunter-wrapper"
path = "src/main.rs"

[dependencies]
wardend-proto = { path = "../wardend-proto" }
serde_json = "1"
anyhow = "1"

[lints]
workspace = true
